ajuste nas entradas